<resources>
    <string name="app_name">小路计步器</string>

    <string name="skip">跳过</string>
    <string name="ad_1">欢迎使用</string>
    <string name="ad_2">小路计步器</string>
    <string name="copy_right">\@ copy right by fendou</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="height">身高</string>
    <string name="last">上一个</string>
    <string name="next_1">下一个</string>
    <string name="next_2">设置完成</string>

    <string name="user_name">用户名：</string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_name_not_null_tip">用户名不能为空</string>
    <string name="password_not_null_tip">密码不能为空</string>
    <string name="is_logging">正在登录...</string>

    <string name="net_not_good">"网络不给力，请稍候重试…"</string>
    <string name="net_not_available">"网络不可用"</string>
    <string name="pull_to_refresh_header_loading">正在加载中…</string>
    <string name="pull_to_refresh_header_pull_up">上拉可以刷新</string>
    <string name="pull_to_refresh_header_release">松开后刷新</string>
    <string name="pull_to_refresh_header_to_bottom">已经到底啦</string>
    <string name="pull_to_refresh_header_pull_down">下拉可以刷新</string>
    <string name="pull_to_refresh_header_last_refresh_time">最后更新时间 : </string>
    <string name="pull_to_refresh_footer_loading">加载更多...</string>
    <string name="loading">加载中&#8230;</string>

    <string name="sport">运动</string>
    <string name="today">今天</string>
    <string name="message">消息</string>
    <string name="msg_send">发送</string>
    <string name="add_friend">添加好友</string>
    <string name="complete">完成</string>
    <string name="confirm">确定</string>
    <string name="km_cal">%1$skm / %2$skcal</string>
    <string name="sdcard_not_mounted">发送语音需要sdcard支持！</string>
    <string name="press_to_say">按住 说话</string>
    <string name="record_voice_duraion">%1$d\"</string>
    <string name="release_to_end">松开 结束</string>
    <string name="move_top_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>

    <string name="myself">我</string>
    <string name="gallery">相册图片</string>
    <string name="camera">拍照</string>
    <string name="cancel">取消</string>
    <string name="logout">退出</string>
    <string name="logout_tip">确定退出登录？</string>
    <string name="no_sdcard">没有sdcard</string>
    <string name="login_out">退出登录</string>
    <string name="sport_setting_main_module">主模块</string>
    <string name="day_goal">每日目标</string>
    <string name="weight">体重</string>
    <string name="step_width">步幅</string>
    <string name="sport_setting_module_1">模块一</string>
    <string name="sport_time_1">运动时间一</string>
    <string name="sport_goal_1">目标一</string>
    <string name="sport_setting_module_2">模块二</string>
    <string name="sport_time_2">运动时间二</string>
    <string name="sport_goal_2">目标二</string>


    <string name="scan_code">扫一扫</string>
    <string name="app_about">关于</string>
    <string name="personal_info">个人信息</string>
    <string name="app_version">版本：1.0.0</string>
    <string name="check_new_version">检测新版本</string>
    <string name="contact_way">cyfiilu@163.com</string>
    <string name="github_address">点击跳转</string>
    <string name="author_name">beijing iilu fendou</string>
    <string name="rights_reserved">All Rights Reserved</string>
    <string name="code_card_tip">扫一扫有惊喜</string>

    <string-array name="zero_to_one">
        <item >0</item>
        <item >1</item>
    </string-array>

    <string-array name="zero_to_two">
        <item >0</item>
        <item >1</item>
        <item >2</item>
    </string-array>

    <string-array name="zero_to_three">
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
    </string-array>

    <string-array name="zero_to_nine">
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >9</item>
    </string-array>

    <string-array name="three_to_eight">
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
    </string-array>

    <string-array name="zhaozhao_time_range">
        <item >05:00</item>
        <item >06:00</item>
        <item >07:00</item>
        <item >08:00</item>
        <item >09:00</item>
        <item >10:00</item>
        <item >11:00</item>
    </string-array>

    <string-array name="mumu_time_range">
        <item >17:00</item>
        <item >18:00</item>
        <item >19:00</item>
        <item >20:00</item>
        <item >21:00</item>
        <item >22:00</item>
        <item >23:00</item>
    </string-array>

    <string-array name="user_sex">
        <item >男</item>
        <item >女</item>
        <item >保密</item>
    </string-array>

</resources>
