<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_status_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:background="@color/gray_light"
        android:fitsSystemWindows="true"/>

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/user_name"
        android:text="chen182"
        android:layout_above="@+id/et_password"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:text="123456"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:text="@string/register" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/login"/>
    </LinearLayout>

</RelativeLayout>