<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/about_title"
        layout="@layout/title_main" />

    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/about_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/app_icon" />

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_version" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_gitbub_address"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="联系方式： "
            android:textColor="@color/gray_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_way"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gitbub_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="github地址： "
            android:textColor="@color/gray_1" />

        <TextView
            android:id="@+id/tv_github_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/github_address"
            android:textColor="@color/blue_light"
            android:textSize="14sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_rights_reserved"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/author_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_rights_reserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_check_new_versin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/rights_reserved"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_check_new_versin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/selector_btn_blue"
        android:text="@string/check_new_version"
        android:textSize="14sp" />

</RelativeLayout>