<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="@drawable/selector_btn_round_corner"
        android:textSize="14sp"
        android:text="@string/skip"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_in_center"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_ad_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ad_1"
            android:textStyle="italic"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/tv_ad_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/ad_2"
            android:textStyle="italic"
            android:textSize="26sp"/>
    </LinearLayout>

    <View
        android:id="@+id/view_in_center"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/tv_copy_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/copy_right"
        android:visibility="gone"/>

</RelativeLayout>