<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#ededed"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/selector_cover"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="#0ea3f3"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/selector_cover"
        android:gravity="center"
        android:text="@string/gallery"
        android:textColor="#0ea3f3"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/shape_cover_pressed"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/gray_1"
        android:textSize="16sp" />
</LinearLayout>