<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fendou="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="3dp"
    android:paddingBottom="3dp"
    android:background="@color/blue_light"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <com.iilu.fendou.views.TabRadioButton
        android:id="@+id/btn_radio_sport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:text="@string/sport"
        android:textSize="14sp"
        android:textColor="@drawable/selector_text_color"
        android:gravity="center"
        android:drawablePadding="-2dp"
        fendou:drawableButtonSize="25dp"
        fendou:drawableTop="@drawable/selector_btn_sport"/>

    <com.iilu.fendou.views.TabRadioButton
        android:id="@+id/btn_radio_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:text="@string/message"
        android:textSize="14sp"
        android:textColor="@drawable/selector_text_color"
        android:gravity="center"
        android:drawablePadding="-2dp"
        fendou:drawableButtonSize="25dp"
        fendou:drawableTop="@drawable/selector_btn_message"/>

    <com.iilu.fendou.views.TabRadioButton
        android:id="@+id/btn_radio_myself"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@null"
        android:text="@string/myself"
        android:textSize="14sp"
        android:textColor="@drawable/selector_text_color"
        android:gravity="center"
        android:drawablePadding="-2dp"
        fendou:drawableButtonSize="25dp"
        fendou:drawableTop="@drawable/selector_btn_myself"/>
</RadioGroup>